// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds optional to label if not required 1`] = `
Object {
  "props": Object {
    "error": false,
    "helperText": "the help",
    "label": "the label (optional)",
    "onBlur": [Function],
    "onChange": [Function],
    "value": "the value",
  },
  "setValidationResult": [Function],
  "setValue": [Function],
  "validate": [Function],
}
`;

exports[`onChange coerces value using normalize 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "normalized value",
    "type": "updateValue",
  },
]
`;

exports[`onChange dispatches change action 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "updated",
    "type": "updateValue",
  },
]
`;

exports[`onChange uses valueFromTarget to coerce value if provided 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "updatedFromTarget",
    "type": "updateValue",
  },
]
`;

exports[`returns all props needed 1`] = `
Object {
  "props": Object {
    "error": false,
    "helperText": "the help",
    "label": "the label",
    "onBlur": [Function],
    "onChange": [Function],
    "value": "the value",
  },
  "setValidationResult": [Function],
  "setValue": [Function],
  "validate": [Function],
}
`;
